Added basic layout

--- a/heroweb/main/templates/explore.html
+++ b/heroweb/main/templates/explore.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <div class='container'>
-    <h1>Call for Code!</h1>
-    <p>Ella is not cool. Hallelujah :)</p>
+    <h1>EXPLORING</h1>
+    <p>Ella is not cool at all. Hallelujah :)</p>
 </div>
 
 
