--- a/heroweb/users/templates/pass_reset/password_reset.html
+++ b/heroweb/users/templates/pass_reset/password_reset.html
@@ -1,13 +1,17 @@
-<form method="POST">
-    {% csrf_token %}
-    <fieldset>
-        <legend>Reset password</legend>
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset>
+            <legend>Reset password</legend>
+            <div>
+                We'll send you a link so you can continue hunting as soon as possible
+            </div>
+            {{ form }}
+        </fieldset>
         <div>
-            We'll send you a link so you can continue hunting as soon as possible
+            <button type="submit">Request new password</button>
         </div>
-        {{ form }}
-    </fieldset>
-    <div>
-        <button type="submit">Request new password</button>
-    </div>
-</form>
+    </form>
+{% endblock %}
