--- a/heroweb/users/templates/pass_reset/password_reset_complete.html
+++ b/heroweb/users/templates/pass_reset/password_reset_complete.html
@@ -1,4 +1,7 @@
-<div>
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
     <p>Your password has been set</p>
     <a href="{% url 'login' %}">Sign in</a>
 </div>
+{% endblock %}
