--- a/heroweb/users/templates/register.html
+++ b/heroweb/users/templates/register.html
@@ -1,20 +1,24 @@
-<div>
-    <form method="POST">
-        <!-- This is needed for encryption. Dont worry about it, Django handles it -->
-        {% csrf_token %}
-
-        <fieldset>
-            <legend>Create an account</legend>
-            <!-- Insert the form -->
-            {{ form }}
-        </fieldset>
-        <div>
-            <button type="submit">Create account</button>
-        </div>
-    </form>
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
     <div>
-        <small>
-            Already have an account? <a href="{% url 'login' %}">Login</a>
-        </small>
+        <form method="POST">
+            <!-- This is needed for encryption. Dont worry about it, Django handles it -->
+            {% csrf_token %}
+
+            <fieldset>
+                <legend>Create an account</legend>
+                <!-- Insert the form -->
+                {{ form }}
+            </fieldset>
+            <div>
+                <button type="submit">Create account</button>
+            </div>
+        </form>
+        <div>
+            <small>
+                Already have an account? <a href="{% url 'login' %}">Login</a>
+            </small>
+        </div>
     </div>
-</div>
+{% endblock %}
