--- a/heroweb/users/templates/logout.html
+++ b/heroweb/users/templates/logout.html
@@ -1,1 +1,8 @@
-Logged out
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
+    <div class='row mt-5'>
+        Logged out
+    </div>
+</div>
+{% endblock %}
