--- a/heroweb/users/templates/pass_reset/password_reset_confirm.html
+++ b/heroweb/users/templates/pass_reset/password_reset_confirm.html
@@ -1,10 +1,15 @@
-<form method="POST">
-    {% csrf_token %}
-    <fieldset>
-        <legend>Reset password</legend>
-        {{ form }}
-    </fieldset>
-    <div>
-        <button type="submit">Confirm</button>
-    </div>
-</form>
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset>
+            <legend>Reset password</legend>
+            {{ form }}
+        </fieldset>
+        <div>
+            <button type="submit">Confirm</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
