--- a/heroweb/users/templates/profile.html
+++ b/heroweb/users/templates/profile.html
@@ -1,14 +1,19 @@
-<div>
-    <!-- show the username which is an atribute of the object user -->
-    <h1>{{ user.username }}</h2>
-</div>
-<form method="POST">
-    {% csrf_token %}
-    <fieldset>
-        <legend>Update profile</legend>
-        {{ form }}
-    </fieldset>
+{% extends 'base.html' %}
+{% block content %}
+<div class='container brand-text'>
     <div>
-        <button type="submit">Update</button>
+        <!-- show the username which is an atribute of the object user -->
+        <h1>{{ user.username }}</h2>
     </div>
-</form>
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset>
+            <legend>Update profile</legend>
+            {{ form }}
+        </fieldset>
+        <div>
+            <button type="submit">Update</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
