--- a/heroweb/main/static/main.css
+++ b/heroweb/main/static/main.css
@@ -5,8 +5,8 @@ html {
 body {
     color: #5a5a5a;
     padding-top: 50px;
-    background-color: #2B2B71; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to right, #212529 , #2B2B71);
+    /*background-color: #2B2B71;  For browsers that do not support gradients 
+    background-image: linear-gradient(to right, #212529 , #2B2B71);*/
     min-height: 100vh;
     overflow-x: hidden;
 }
