Home page and general post view

--- a/heroweb/main/static/main.css
+++ b/heroweb/main/static/main.css
@@ -23,3 +23,17 @@ body {
         width: auto;
         height: 50%;
     }
+
+    .post-preview {
+        transition: 0.5s;
+    }
+
+    .post-preview a {
+        color:#5a5a5a
+    }
+
+
+    .post-preview:hover {
+        background-color: #a0a0a0;
+        transition: 0.5s;
+    }
