--- a/heroweb/main/templates/explore.html
+++ b/heroweb/main/templates/explore.html
@@ -22,59 +22,89 @@
                 {% if forloop.first %}
                     <div class="tab-pane fade show active" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' '}}-tab">
                         {{tab.text}}
+                        <div class='mb-3 mt-5 fs-2'>Replies</div>
+                        <hr>
+                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide">
+                            <div class="carousel-inner mx-5">
+                                {% for view in views %}
+                                    {% if forloop.first %}
+                                        <div class="carousel-item active">
+                                            <div class='row mt-3 px-4'>
+                                                {% for reply in view %}
+                                                    <div class="card mx-1" style="width: 18rem;">
+                                                        <div class="card-body">
+                                                        <h5 class="card-title">{{reply.title}}</h5>
+                                                        <small>{{reply.author}}</small> 
+                                                        <hr>
+                                                        <p class="card-text">{{reply.text}}</p>
+                                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    {% else %}
+                                        <div class="carousel-item">
+                                            <div class='row mt-3 px-4'>
+                                                {% for reply in view %}
+                                                    <div class="card mx-1" style="width: 18rem;">
+                                                        <div class="card-body">
+                                                        <h5 class="card-title">{{reply.title}}</h5>
+                                                        <small>{{reply.author}}</small> 
+                                                        <hr>
+                                                        <p class="card-text">{{reply.text}}</p>
+                                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                 {% else %}
                     <div class="tab-pane fade" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' ' }}-tab">
                         {{tab.text}}
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-    </div>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner mx-5">
-            {% for view in views %}
-                {% if forloop.first %}
-                    <div class="carousel-item active">
-                        <div class='row mt-3 px-4'>
-                            {% for reply in view %}
-                                <div class="card mx-1" style="width: 18rem;">
-                                    <div class="card-body">
-                                    <h5 class="card-title">{{reply.title}}</h5>
-                                    <hr>
-                                    <p class="card-text">{{reply.text}}</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class='mb-3 mt-5 fs-2'>Replies</div>
+                        <hr>
+                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner mx-5">
+                                <div class="carousel-item active">
+                                    <div class='row mt-3 px-4'>
+                                        <div class="card mx-1" style="width: 18rem;">
+                                            <div class="card-body">
+                                            <h5 class="card-title">asdasd</h5>
+                                            <hr>
+                                            <p class="card-text">fghfgh</p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% else %}
-                    <div class="carousel-item">
-                        <div class='row mt-3 px-4'>
-                            {% for reply in view %}
-                                <div class="card mx-1" style="width: 18rem;">
-                                    <div class="card-body">
-                                    <h5 class="card-title">{{reply.title}}</h5>
-                                    <hr>
-                                    <p class="card-text">{{reply.text}}</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    </div>
-                                </div>
-                            {% endfor %}
+                            </div>
+                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
                     </div>
                 {% endif %}
             {% endfor %}
         </div>
-        <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
     </div>
 </div>
 
