--- a/heroweb/main/templates/index.html
+++ b/heroweb/main/templates/index.html
@@ -2,9 +2,28 @@
 {% block content %}
 
 <div class='container'>
-    <h1>Call for Code!</h1>
-    <p>Ella is not cool. Hallelujah :)</p>
-</div>
-
+    <div class="row text-center">
+        <h1 class='mb-3'>Heronet</h1>
+        <hr>
+        <h4>Become a hero!</h4>
+        <p><i>Description</i></p>
+    </div>
+    <div class='d-flex row mt-5 justify-content-center'>
+        {% for post in posts %}
+            <div class="card m-1 post-preview" style="width: 18rem;">
+                <a class='text-decoration-none' href="{% url 'post' id=post.id %}">
+                    <div class="card-body">
+                        <div class='row'>
+                            <h5 class="card-title">{{post.title}}</h5>
+                            <small>{{post.author}}</small> 
+                        </div>
+                        <hr>
+                        <p class="card-text">{{post.text}}</p>
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+</div> 
 
 {% endblock %}
