--- a/heroweb/users/templates/pass_reset/password_reset.html
+++ b/heroweb/users/templates/pass_reset/password_reset.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class='container brand-text'>
     <form method="POST">
@@ -8,7 +9,7 @@
             <div>
                 We'll send you a link so you can continue hunting as soon as possible
             </div>
-            {{ form }}
+            {{ form|crispy }}
         </fieldset>
         <div>
             <button type="submit">Request new password</button>
