--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Make a post</a>
+                            <a class="nav-link" href="{% url 'make_post' %}">Make a post</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'explore' %}">Explore</a>
