--- a/heroweb/users/templates/login.html
+++ b/heroweb/users/templates/login.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class='container brand-text'>
     <form method="POST">
         {% csrf_token %}
         <fieldset>
             <legend>Log in</legend>
-            {{ form }}
+            {{ form|crispy }}
         </fieldset>
         <div>
             <button type="submit">Log in</button>
