--- a/heroweb/users/templates/profile.html
+++ b/heroweb/users/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class='container brand-text'>
     <div>
@@ -9,7 +10,7 @@
         {% csrf_token %}
         <fieldset>
             <legend>Update profile</legend>
-            {{ form }}
+            {{ form|crispy }}
         </fieldset>
         <div>
             <button type="submit">Update</button>
