--- a/heroweb/main/templates/post.html
+++ b/heroweb/main/templates/post.html
@@ -2,10 +2,12 @@
 {% block content %}
 <div class='container'>
     <div class='row border px-4'>
-        <h1 class='text-center m-4'>{{post.title}}</h1>
+        <!-- Main post -->
+        <h1 class='text-center m-4'>{{main_post.title}}</h1>
         <hr>
-        <p>{{post.text}}</p>
-        <p>Author: {{post.author}}</p>
+        <p>{{main_post.text}}</p>
+        <p>Author: {{main_post.author}}</p>
+        <!-- Tabs of the post -->
         <nav class='mt-3'>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 {% for tab in tabs %}
@@ -17,180 +19,20 @@
                 {% endfor %}
             </div>
         </nav>
+        <!-- Content of the tabs -->
         <div class="tab-content py-4 px-5" id="nav-tabContent">
             {% for tab in tabs %}
                 {% if forloop.first %}
                     <div class="tab-pane fade show active" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' '}}-tab">
-                        {{tab.text}}
-                        <div class='mb-3 mt-5 fs-2'>Replies</div>
-                        <hr>
-                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide">
-                            <div class="carousel-inner mx-5">
-                                {% for view in views %}
-                                    {% if forloop.first %}
-                                        <div class="carousel-item active">
-                                            <div class='row mt-3 px-4'>
-                                                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                                                    {% for reply in view %}
-                                                        {% if tab.id == reply.reply_tab %}
-                                                        {% comment %}
-                                                            <!-- <div class="card m-1 post-preview" style="width: 18rem;">
-
-                                                                    <div class="card-body">
-                                                                        <div class='row'>
-                                                                            <h5 class="card-title">{{reply.title}}</h5>
-                                                                            <small>{{reply.author}}</small> 
-                                                                        </div>
-                                                                        <hr>
-                                                                        <p class="card-text">{{reply.text}}</p>
-                                                                    </div>
-                                                                
-                                                            </div> -->
-                                                        {% endcomment %}
-                                                            <li class="nav-item" role="presentation">
-                                                                <div class="card m-1 post-preview" id="pills-{{reply.title|cut:' '}}-tab" style="width: 18rem;" data-bs-toggle="pill" data-bs-target="#pills-{{reply.title|cut:' '}}" role='tab' aria-controls="pills-{{reply.title|cut:' '}}" aria-selected="false">
-                                                                    <div class="card-body">
-                                                                        <div class='row'>
-                                                                            <h5 class="card-title">{{reply.title}}</h5>
-                                                                            <small>{{reply.author}}</small> 
-                                                                        </div>
-                                                                        <hr>
-                                                                        <p class="card-text">{{reply.text}}</p>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                </ul>
-                                                <div class="tab-content" id="pills-tabContent">
-                                                    {% for reply in view %}
-                                                        {% if tab.id == reply.reply_tab %}
-                                                            <div class="tab-pane fade" id="pills-{{reply.title|cut:' '}}" role="tabpanel" aria-labelledby="pills-{{reply.title|cut:' '}}-tab">
-                                                                {% for post_r in posts %}
-                                                                    {% if post_r.reply_post == reply.id %}
-                                                                        <div class="card m-1 post-preview" style="width: 18rem;">
-                                                                            <div class="card-body">
-                                                                                <div class='row'>
-                                                                                    <h5 class="card-title">{{post_r.title}}</h5>
-                                                                                    <small>{{post_r.author}}</small> 
-                                                                                </div>
-                                                                                <hr>
-                                                                                <p class="card-text">{{post_r.text}}</p>
-                                                                            </div>
-                                                                        </div>
-                                                                    {% endif %}
-                                                                {% endfor %}
-                                                            </div>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                </div>
-
-
-                                            </div>
-                                        </div>
-                                    {% else %}
-                                        <div class="carousel-item active">
-                                            <div class='row mt-3 px-4'>
-                                                {% for reply in view %}
-                                                    {% if tab.id == reply.reply_tab %}
-                                                        <div class="card m-1 post-preview" style="width: 18rem;">
-                                                            <a class='text-decoration-none' href="{% url 'post' id=reply.id %}">
-                                                                <div class="card-body">
-                                                                    <div class='row'>
-                                                                        <h5 class="card-title">{{reply.title}}</h5>
-                                                                        <small>{{reply.author}}</small> 
-                                                                    </div>
-                                                                    <hr>
-                                                                    <p class="card-text">{{reply.text}}</p>
-                                                                </div>
-                                                            </a>
-                                                        </div>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
+                        {% include 'builder/tabs_content.html' %}
                     </div>
                 {% else %}
                     <div class="tab-pane fade" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' ' }}-tab">
-                        {{tab.text}}
-                        <div class='mb-3 mt-5 fs-2'>Replies</div>
-                        <hr>
-                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide">
-                            <div class="carousel-inner mx-5">
-                                {% for view in views %}
-                                    {% if forloop.first %}
-                                        <div class="carousel-item active">
-                                            <div class='row mt-3 px-4'>
-                                                {% for reply in view %}
-                                                    {% if tab.id == reply.reply_tab %}
-                                                        <div class="card m-1 post-preview" style="width: 18rem;">
-                                                            <a class='text-decoration-none' href="{% url 'post' id=reply.id %}">
-                                                                <div class="card-body">
-                                                                    <div class='row'>
-                                                                        <h5 class="card-title">{{reply.title}}</h5>
-                                                                        <small>{{reply.author}}</small> 
-                                                                    </div>
-                                                                    <hr>
-                                                                    <p class="card-text">{{reply.text}}</p>
-                                                                </div>
-                                                            </a>
-                                                        </div>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% else %}
-                                        <div class="carousel-item active">
-                                            <div class='row mt-3 px-4'>
-                                                {% for reply in view %}
-                                                    {% if tab.id == reply.reply_tab %}
-                                                        <div class="card m-1 post-preview" style="width: 18rem;">
-                                                            <a class='text-decoration-none' href="{% url 'post' id=reply.id %}">
-                                                                <div class="card-body">
-                                                                    <div class='row'>
-                                                                        <h5 class="card-title">{{reply.title}}</h5>
-                                                                        <small>{{reply.author}}</small> 
-                                                                    </div>
-                                                                    <hr>
-                                                                    <p class="card-text">{{reply.text}}</p>
-                                                                </div>
-                                                            </a>
-                                                        </div>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-
+                        {% include 'builder/tabs_content.html' %}
                     </div>
                 {% endif %}
             {% endfor %}
         </div>
     </div>
 </div>
-
-
 {% endblock %}
