--- a/heroweb/main/templates/builder/horiz.html
+++ b/heroweb/main/templates/builder/horiz.html
@@ -4,31 +4,11 @@
         {% for view in replies_raw|org_replies:tab.id %}
             {% if forloop.first %}
                 <div class="carousel-item active">
-                    <div class='row mt-3 px-4'>
-                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                            {% for reply in view %}
-                                <li class="nav-item" role="presentation">
-                                    <div id="pills-{{reply.title|cut:' '}}-tab" data-bs-toggle="pill" data-bs-target="#pills-{{reply.title|cut:' '}}" type="button" role="tab" aria-controls="pills-{{reply.title|cut:' '}}" aria-selected="true">
-                                        {% include 'builder/post_prev.html' with post=reply %}
-                                    </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                    {% include 'builder/item.html' %}
                 </div>
             {% else %}
                 <div class="carousel-item">
-                    <div class='row mt-3 px-4'>
-                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                            {% for reply in view %}
-                                <li class="nav-item" role="presentation">
-                                    <div id="pills-{{reply.title|cut:' '}}-tab" data-bs-toggle="pill" data-bs-target="#pills-{{reply.title|cut:' '}}" type="button" role="tab" aria-controls="pills-{{reply.title|cut:' '}}" aria-selected="true">
-                                        {% include 'builder/post_prev.html' with post=reply %}
-                                    </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                    {% include 'builder/item.html' %}
                 </div>
             {% endif %}
         {% endfor %}
