Added change in size of the side buttons and button to go to the post

--- a/heroweb/main/static/main.css
+++ b/heroweb/main/static/main.css
@@ -21,7 +21,7 @@ body {
     
     .reply-button {
         width: auto;
-        height: 50%;
+        height: 7.5em;
     }
 
     .post-preview {
