--- a/heroweb/main/templates/builder/item.html
+++ b/heroweb/main/templates/builder/item.html
@@ -3,7 +3,7 @@
         {% for reply in view %}
             <li class="nav-item" role="presentation">
                 <div id="pills-{{reply.title|cut:' '}}-tab" data-bs-toggle="pill" data-bs-target="#pills-{{reply.title|cut:' '}}" type="button" role="tab" aria-controls="pills-{{reply.title|cut:' '}}" aria-selected="true">
-                    {% include 'builder/post_prev.html' with post=reply %}
+                    {% include 'builder/post_prev.html' with post=reply selected='focused' %}
                 </div>
             </li>
         {% endfor %}
