--- a/heroweb/main/static/main.css
+++ b/heroweb/main/static/main.css
@@ -36,3 +36,8 @@ body {
         background-color: #a0a0a0;
         transition: 0.5s;
     }
+
+    .create-post {
+        color: #3b3b3b;
+        width: 70%;
+    }
