First try to add tabs

--- a/heroweb/main/templates/make_post.html
+++ b/heroweb/main/templates/make_post.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
 <div class='container brand-text'>
     <div>
@@ -8,10 +9,14 @@
                 <!-- This is needed for encryption. Dont worry about it, Django handles it -->
                 {% csrf_token %}
 
-                <fieldset class='mb-3'>
+                <fieldset class='mb-3' id='post_form'>
                     <legend>Make a post</legend>
                     <!-- Insert the form -->
                     {{ form|crispy }}
+                    <div id='tabs'>
+
+                    </div>
+                    <button onclick="add_tab(this)" type='button' class='btn btn-outline-secondary mt-4'>Add tab</button>
                 </fieldset>
                 <div>
                     <button type="submit" class='btn btn-success'>Create post</button>
@@ -19,4 +24,7 @@
             </div>
         </form>
     </div>
+</div>
+
+<script src="{% static 'js/make_post.js' %}" defer></script>
 {% endblock %}
