--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -41,3 +41,12 @@ body {
         color: #3b3b3b;
         width: 70%;
     }
+
+    .reply_button {
+        color: inherit;
+        text-decoration:none;
+        transition: 1s;
+    }
+    .reply_button:hover {
+        transition: 1s;
+    }
