--- a/heroweb/main/templates/builder/tab_form.html
+++ b/heroweb/main/templates/builder/tab_form.html
@@ -1,5 +1,12 @@
 <div class='tab_form my-5' id='tab' name='tab' style='display:none;'>
-    <h5>Tab content</h5>
+    <div class='row'>
+        <div class='col'>
+            <h5>Tab content</h5>
+        </div>
+        <div class="d-flex col justify-content-end">
+            <button type='button' class='btn btn-danger' onclick="delete_tab(this)">Delete</button>
+        </div>
+    </div>
     <hr>
     <label for="tab_title">Title</label>
     <br>
